# midisynthd

./: CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci-build.yml
config/: midisynthd.conf  midisynthd.conf.example
src/: audio.c  audio.h  config.c  config.h  daemonize.c  daemonize.h  main.c  midi_alsa.c  midi_alsa.h  midi_jack.c  midi_jack.h  synth.c  synth.h
systemd/: midisynthd-user.service  midisynthd.service
tests/: CMakeLists.txt  jack_stubs.c  stubs.c  test_config.c  test_midi.c  test_midi_jack.c  test_synth.c
